Se crea estructura html del header

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="header-1">
+            <div class="dashboard">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="icons">
+                <img src="./img/envelope.png" alt="correo">
+                <img src="./img/bell.png" alt="notificación">
+                <img src="./img/user.png" alt="usuario">
+            </div>
+        </div>
+    </header>
     <script type="module" src="app.js"></script>
 </body>
 
