Se crea sección de botones en html

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,15 @@
             </div>
         </div>
     </header>
+
+
+    <div class="btns">
+        <button class="btn" id="employees">Empleados</button>
+        <button class="btn" id="profiles">Perfiles</button>
+        <button class="btn" id="categories">Categorías</button>
+        <button class="btn" id="registers">Registros</button>
+    </div>
+
     <script type="module" src="app.js"></script>
 </body>
 
