--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
         <button class="btn" id="registers">Registros</button>
     </div>
 
+    <div id="subtitle">
+
+    </div>
+
     <script type="module" src="app.js"></script>
 </body>
 
