Se crea sección de despliegue de ino de API en html

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
     </div>
 
     <div id="subtitle">
+        <div id="datacontainer">
 
+        </div>
     </div>
 
     <script type="module" src="app.js"></script>
