--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
     <link rel="stylesheet" href="style.css">
     <title>Dashboard</title>
 </head>
@@ -12,5 +13,6 @@
 <body>
 
 </body>
+<script type="module" src="main.js"></script>
 
 </html>
