Se define lógica de botón empleados

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
+    <div class="btns">
+        <button class="btn" id="employees">Empleados</button>
+        <button class="btn" id="profiles">Perfiles</button>
+        <button class="btn" id="categories">Categorías</button>
+        <button class="btn" id="registers">Registros</button>
+    </div>
+    <div id="subtitle">
 
+    </div>
+    <div id="datacontainer">
+
+    </div>
 </body>
 <script type="module" src="main.js"></script>
 
