Se optimiza código

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,15 @@
 </head>
 
 <body>
-    <div class="btns">
-        <button class="btn" id="employees">Empleados</button>
-        <button class="btn" id="profiles">Perfiles</button>
-        <button class="btn" id="categories">Categorías</button>
-        <button class="btn" id="registers">Registros</button>
-    </div>
+    <section>
+        <div class="btns">
+            <button class="btn" id="employees">Empleados</button>
+            <button class="btn" id="profiles">Perfiles</button>
+            <button class="btn" id="categories">Categorías</button>
+            <button class="btn" id="registers">Registros</button>
+        </div>
+    </section>
+
     <div id="subtitle">
 
     </div>
