Se optimiza código

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <div class="btns">
-            <button class="btn" id="employees">Empleados</button>
+            <button class="btn" id="employees">Contactos</button>
             <button class="btn" id="profiles">Perfiles</button>
             <button class="btn" id="categories">Categorías</button>
             <button class="btn" id="registers">Registros</button>
@@ -21,7 +21,7 @@
     </section>
 
     <div id="subtitle">
-
+        <p> EMPLEADOS</p>
     </div>
     <div id="datacontainer">
 
