--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-1">
+            <div class="dashboard">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="icons">
+                <img src="./img/envelope.png" alt="correo">
+                <img src="./img/bell.png" alt="notificación">
+                <img src="./img/user.png" alt="usuario">
+            </div>
+        </div>
+    </header>
+
     <section>
         <div class="btns">
             <button class="btn" id="employees">Contactos</button>
